@@ -471,7 +471,7 @@
 					<width>550</width>
 					<height>80</height>
 					<texture colordiffuse="CCFFFFFF">overlays/overlayfade.png</texture>
-					<visible>String.IsEmpty(ListItem.Art(landscape)) | Listitem.IsCollection</visible>
+					<visible>String.IsEmpty(ListItem.Art(landscape))</visible>
 				</control>
 				<control type="textbox">
 					<left>84</left>
@@ -483,7 +483,7 @@
 					<aligny>center</aligny>
 					<label>[B]$INFO[ListItem.Label][/B]</label>
 					<autoscroll time="2000" delay="3000" repeat="5000">$PARAM[focused]</autoscroll>
-					<visible>String.IsEmpty(ListItem.Art(landscape)) | Listitem.IsCollection</visible>
+					<visible>String.IsEmpty(ListItem.Art(landscape))</visible>
 				</control>
 			</control>
 			<control type="group">
